ブロックのキャッシュが、KGWの算出に必要な分より短かった問題の修正